--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
         }
     ],
     "minimum-stability": "dev",
+    "require-dev": {
+      "phpunit/phpunit": "5.5.*"
+    },
     "require": {},
     "autoload": {
         "psr-4": {
